fixed navbar link colors on mobile, centered examples text in table

--- a/src/styles/theme/_extra.scss
+++ b/src/styles/theme/_extra.scss
@@ -92,6 +92,7 @@ a.rl:hover, .rl:hover {
 }
 
 .menulink {
+  color: $background-color;
   padding: 14px 16px;
   text-decoration: none;
   display: block;
